# knotgrowth

./: .gitignore  README.md  justfile  pyproject.toml
animations/: animations.blend  animations.blend1  save_isotopy.py
animations/trefoil/trefoil/: frame1.npy
animations/unknot/: unknot.py
animations/unknot/circle/: frame1.npy
animations/unknot/dent/: frame10.npy  frame11.npy  frame12.npy  frame13.npy  frame14.npy  frame15.npy  frame16.npy  frame17.npy  frame18.npy  frame19.npy  frame2.npy  frame20.npy  frame3.npy  frame4.npy  frame5.npy  frame6.npy  frame7.npy  frame8.npy  frame9.npy
animations/unknot/double_twist/: frame1.npy  frame10.npy  frame11.npy  frame12.npy  frame13.npy  frame14.npy  frame15.npy  frame16.npy  frame17.npy  frame18.npy  frame19.npy  frame2.npy  frame20.npy  frame21.npy  frame22.npy  frame23.npy  frame24.npy  frame25.npy  frame26.npy  frame27.npy  frame28.npy  frame29.npy  frame3.npy  frame30.npy  frame31.npy  frame32.npy  frame33.npy  frame34.npy  frame35.npy  frame36.npy  frame37.npy  frame38.npy  frame39.npy  frame4.npy  frame40.npy  frame5.npy  frame6.npy  frame7.npy  frame8.npy  frame9.npy
animations/unknot/twist/: frame10.npy  frame11.npy  frame12.npy  frame13.npy  frame14.npy  frame15.npy  frame16.npy  frame17.npy  frame18.npy  frame19.npy  frame2.npy  frame20.npy  frame21.npy  (+26 more)
src/: main.py  main_example.py  main_old.py
src/knotgrowth/: animations.py  calculationfunctions.py  calculationfunctions.pyx  findvolume.py  gridgeneration.py  growth.py  knotcurves.py  linefield.py  simulationloop.py  simulationloop.pyx  visualizing.py
(+331 files in other folders)
